fixed problem with slider overflowing and showing scrollbar

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -3,9 +3,5 @@
 .App {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: #141414;
-
-  .content {
-    background-color: red;
-    margin-top: 45%;
-  }
+  height: 100%;
 }
