--- a/src/components/Cover.scss
+++ b/src/components/Cover.scss
@@ -1,14 +1,13 @@
 .cover {
   width: 100%;
-  height: 100%;
+  height: 85vh;
   z-index: 0;
-  position: absolute;
-  top: 0;
-  background-color: red;
 
   &-image {
+    background-repeat: no-repeat;
+    background-size: 100% auto;
     width: 100%;
-    height: auto;
+    height: 100%;
   }
 
   &-text {
