--- a/src/components/Topbar/Topbar.scss
+++ b/src/components/Topbar/Topbar.scss
@@ -6,6 +6,7 @@
   flex-direction: row;
   align-items: center;
   height: 68px;
+  width: 100%;
   padding: 0 60px;
 
   &-logo {
