--- a/src/index.scss
+++ b/src/index.scss
@@ -6,4 +6,7 @@
 body,
 html {
   font-family: sans-serif;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
